samples/_failures_safe/1761286228_2fbf86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_552111f6.c: In function ‘main’:
./samples/SAFE/__tmp_552111f6.c:174:5: error: expected identifier or ‘(’ at end of input
  174 |     for (int
      |     ^~~
./samples/SAFE/__tmp_552111f6.c:174:5: error: expected declaration or statement at end of input
